Spring Modulith improvements