@@ -18,25 +18,21 @@ public class PaginationParametersValidator {
                                  final Set<String> allowedSortAttributeValues) {
         List<String> errors = new ArrayList<>();
         if (pageNumber != null && pageNumber < 0) {
-            errors.add(error(String.format("'%s' is the incorrect 'PageNumber' attribute value. " +
-                    "'PageNumber' value should be non negative integer number value.", pageNumber)));
+            errors.add(error("'%s' is the incorrect 'PageNumber' attribute value. 'PageNumber' value should be non negative integer number value.".formatted(pageNumber)));
         }
         if (pageSize != null && pageSize < 1) {
-            errors.add(error(String.format("'%s' is the incorrect 'PageSize' attribute value. " +
-                    "'PageSize' value should be non negative integer number value which is bigger than 1.", pageSize)));
+            errors.add(error("'%s' is the incorrect 'PageSize' attribute value. 'PageSize' value should be non negative integer number value which is bigger than 1.".formatted(pageSize)));
         }
         if (sortAttribute != null && !allowedSortAttributeValues.contains(sortAttribute)) {
-            errors.add(error(String.format("'%s' is incorrect 'sortAttribute' value. Allowed 'sortAttribute' values are '%s'.",
-                    sortAttribute, allowedSortAttributeValues)));
+            errors.add(error("'%s' is incorrect 'sortAttribute' value. Allowed 'sortAttribute' values are '%s'.".formatted(sortAttribute, allowedSortAttributeValues)));
         }
         if (sortDirection != null && !ALLOWED_SORT_DIRECTION_VALUES.contains(sortDirection.toLowerCase(java.util.Locale.ROOT))) {
-            errors.add(error(String.format("'%s' is incorrect 'sortDirection' value. Allowed 'sortDirection' values are '%s'.",
-                    sortDirection, ALLOWED_SORT_DIRECTION_VALUES)));
+            errors.add(error("'%s' is incorrect 'sortDirection' value. Allowed 'sortDirection' values are '%s'.".formatted(sortDirection, ALLOWED_SORT_DIRECTION_VALUES)));
         }
         return errors;
     }
 
     private static String error(String message) {
-        return String.format(" Error: { %s }. ", message);
+        return " Error: { %s }. ".formatted(message);
     }
 }
